--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,12 @@ dependencies:
   flutter_credit_card: ^4.0.1
   material_symbols_icons: ^4.2711.0
   icons_flutter: ^0.0.4
+  # firebase_core: ^2.24.2
+  # firebase_auth: ^4.15.2
+  # firebase_database: ^10.3.8
+  firebase_auth: ^4.15.3
+  firebase_core: ^2.24.2
+  
 
 
 dev_dependencies:
