--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   # firebase_database: ^10.3.8
   firebase_auth: ^4.15.3
   firebase_core: ^2.24.2
+  flutter_map: ^6.1.0
+  latlong2: ^0.9.0
   
 
 
