--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   # firebase_database: ^10.3.8
   firebase_auth: ^4.15.3
   firebase_core: ^2.24.2
+  cloud_firestore: ^4.13.6
+  image_picker: ^1.0.5
+  firebase_storage: ^11.5.6
   
 
 
