--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   firebase_core: ^2.24.2
   flutter_map: ^6.1.0
   latlong2: ^0.9.0
+  book_my_seat: ^1.0.1
+  cloud_firestore: ^4.13.6
   
 
 
