--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,16 @@ dependencies:
   mailer: ^6.0.1
   ticket_widget: ^1.0.2
   image_gallery_saver: ^2.0.3
-
+  flutter_map: ^3.0.0
+  dio: ^4.0.0
+  #flutter_polyline_points: ^2.0.0
+  #google_maps_flutter: ^2.5.0
+  #flutter_osm_plugin: ^0.7.5
+  open_street_map_search_and_pick: ^0.1.0
+  latlng: any
+  latlong2: ^0.8.2
+  flutter_osm_plugin: ^0.22.3+1
+  #openstreetmap_flutter: ^0.11.0
   
 
 
@@ -67,7 +76,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.1
+  flutter_lints: 2.0.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
