--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,9 +39,6 @@ dependencies:
   flutter_credit_card: ^4.0.1
   material_symbols_icons: ^4.2711.0
   icons_flutter: ^0.0.4
-  # firebase_core: ^2.24.2
-  # firebase_auth: ^4.15.2
-  # firebase_database: ^10.3.8
   firebase_auth: ^4.15.3
   firebase_core: ^2.24.2
   book_my_seat: ^1.0.1
@@ -53,21 +50,35 @@ dependencies:
   mailer: ^6.0.1
   ticket_widget: ^1.0.2
   image_gallery_saver: ^2.0.3
-
+  qr_flutter: ^4.1.0
+  shared_preferences: ^2.2.2
+  flutter_map: ^3.1.0
+  latlng: ^1.0.0
+  latlong2: ^0.8.1
+  #google_maps_flutter: ^2.5.0
+  open_street_map_search_and_pick: ^0.1.0
+  provider: ^6.1.1
   
-
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/logo.png"
+  adaptive_icon_foreground: "assets/images/logofore.png"
+  adaptive_icon_background: "#ffffff"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.1
+  flutter_lints: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
