--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,12 +52,19 @@ dependencies:
   image_gallery_saver: ^2.0.3
   qr_flutter: ^4.1.0
   shared_preferences: ^2.2.2
-  flutter_map: ^3.1.0
+  #flutter_map: ^3.1.0
   latlng: ^1.0.0
-  latlong2: ^0.8.1
+  #latlong2: ^0.8.1
   #google_maps_flutter: ^2.5.0
-  open_street_map_search_and_pick: ^0.1.0
+  #open_street_map_search_and_pick: ^0.1.0
   provider: ^6.1.1
+  open_street_map_search_and_pick: ^0.0.12
+  flutter_map: 3.1.0 
+  dio: ^4.0.0
+  google_maps_flutter: ^2.0.12
+  flutter_osm_plugin: ^0.22.3+1
+  latlong2: ^0.8.2
+  #openstreetmap_flutter: ^0.11.0
   
 
 
@@ -78,7 +85,7 @@ flutter_icons:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.1
+  flutter_lints: 2.0.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
