--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,12 +53,12 @@ dependencies:
   mailer: ^6.0.1
   ticket_widget: ^1.0.2
   image_gallery_saver: ^2.0.3
-  open_street_map_search_and_pick: ^0.0.12
-  flutter_map: 3.1.0 
-  dio: ^4.0.0
-  google_maps_flutter: ^2.0.12
-  flutter_osm_plugin: ^0.22.3+1
-  latlong2: ^0.8.2
+  #open_street_map_search_and_pick: ^0.0.12
+  #flutter_map: 3.1.0 
+  #dio: ^4.0.0
+  #google_maps_flutter: ^2.0.12
+  #flutter_osm_plugin: ^0.22.3+1
+  #latlong2: ^0.8.2
   #openstreetmap_flutter: ^0.11.0
   
 
