--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   mailer: ^6.0.1
   ticket_widget: ^1.0.2
   image_gallery_saver: ^2.0.3
+  qr_flutter: ^4.1.0
   #open_street_map_search_and_pick: ^0.0.12
   #flutter_map: 3.1.0 
   #dio: ^4.0.0
