--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   google_maps_flutter: ^2.0.12
   flutter_osm_plugin: ^0.22.3+1
   latlong2: ^0.8.2
+  provider: ^6.1.1
   #openstreetmap_flutter: ^0.11.0
   
 
