--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,7 +55,7 @@ dependencies:
   image_gallery_saver: ^2.0.3
   qr_flutter: ^4.1.0
   url_launcher: ^6.2.2
-  google_maps_flutter: ^2.5.0
+  #google_maps_flutter: ^2.5.0
   #open_street_map_search_and_pick: ^0.0.12
   #flutter_map: 3.1.0 
   #dio: ^4.0.0
