--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   provider: ^6.1.1
   qr_flutter: ^4.1.0
   url_launcher: ^6.2.2
+  sqflite: ^2.3.0
   # google_maps_flutter: ^2.5.0
   #open_street_map_search_and_pick: ^0.0.12
   #flutter_map: 3.1.0 
