--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   qr_flutter: ^4.1.0
   url_launcher: ^6.2.2
   google_maps_flutter: ^2.5.0
+  flutter_local_notifications: ^16.0.0+1
   #open_street_map_search_and_pick: ^0.0.12
   #flutter_map: 3.1.0 
   #dio: ^4.0.0
