--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   url_launcher: ^6.2.2
   google_maps_flutter: ^2.5.0
   flutter_local_notifications: ^16.0.0+1
+  awesome_notifications: ^0.88.0
   #open_street_map_search_and_pick: ^0.0.12
   #flutter_map: 3.1.0 
   #dio: ^4.0.0
